--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">FristCodeTask</string>
+    <string name="app_name">FirstCodeTask</string>
+    <string name="required">This failed is required</string>
+    <string name="edited">Post has been edited successfully</string>
+    <string name="added">Post has been added successfully</string>
 </resources>
